Falta Corregir Responsive Tablet

--- a/UT3/Tarea Media Querie/index.html
+++ b/UT3/Tarea Media Querie/index.html
@@ -7,6 +7,8 @@
     <title>Tarea Media Querie</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive-movil.css">
+    <link rel="stylesheet" href="responsive-tablet.css">
+    <link rel="stylesheet" href="responsive-mini-tablet.css">
 </head>
 <body>
     <main class="flex-column">
@@ -35,9 +37,9 @@
             </div>
         </div>
         <div id="container-cajas-form-ubi" class="flex-row">
-            <div id="caja-form">
+            <div id="caja-form" class="flex-column">
+                <p id="formulario-title">Datos de contacto</p>
                 <form class="flex-column" action="">
-                    <p id="formulario-title">Datos de contacto</p>
                     <div id="div-email-nombre">
                         <div class="flex-row">
                             <div id="form-div-email" class="flex-column form-label">
